@@ -1,3 +1,7 @@
+2008-03-29  ARAKI Yasuhiro  <ar@debian.org>
+
+	* app/models/article.rb (Article::self.search): Change to search by body and title columns.
+
 2008-03-22  ARAKI Yasuhiro  <ar@debian.org>
 
 	* donrails/tool/update-custom.sh (DOTDONRAILS): Change to use DOTDONRAILS.
